# ScopeOne

./: .gitignore  CMakeLists.txt  README.md
ScopeOneCore/: .gitignore  CMakeLists.txt  README.md
ScopeOneCore/include/scopeone/: ImageFrame.h  ScopeOneCore.h  SharedFrame.h  scopeone_core_export.h
ScopeOneCore/internal/: AgentProtocol.h  BackgroundCalibrationModule.h  FFTModule.h  FrameBufferUtils.h  GaussianBlurModule.h  ImageProcessingFramework.h  MDAManager.h  MMCoreManager.h  MedianFilterModule.h  MultiProcessCameraManager.h  ProcessingModule.h  ProcessingModuleTemplate.h  RecordingManager.h  SpatiotemporalBinningModule.h
ScopeOneCore/python/: ScopeOneCoreBindings.cpp
ScopeOneCore/python/scopeone/: .gitignore  README.md  pyproject.toml
ScopeOneCore/python/scopeone/examples/: example_minimal.ipynb
ScopeOneCore/python/scopeone/src/scopeone/: __init__.py  core.py
ScopeOneCore/src/: AgentMain.cpp  BackgroundCalibrationModule.cpp  FFTModule.cpp  FrameBufferUtils.cpp  GaussianBlurModule.cpp  ImageProcessingFramework.cpp  MDAManager.cpp  MMCoreManager.cpp  MedianFilterModule.cpp  MultiProcessCameraManager.cpp  ProcessingModule.cpp  ProcessingModuleTemplate.cpp  RecordingManager.cpp  ScopeOneCore.cpp  SpatiotemporalBinningModule.cpp
config/: MMConfig_demo_dual.cfg  dual_hamamatsu_897D.cfg
resources/: resources.qrc
src/: AboutDialog.cpp  AboutDialog.h  AppVersion.h.in  ConsoleWidget.cpp  ConsoleWidget.h  DeviceControlWidget.cpp  DeviceControlWidget.h  DevicePropertyWidget.cpp  DevicePropertyWidget.h  ImageProcessingWidget.cpp  ImageProcessingWidget.h  ImageSessionDialog.cpp  ImageSessionDialog.h  InspectWidget.cpp  InspectWidget.h  MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h  RecordingWidget.cpp  RecordingWidget.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
